bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging_recursive.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging_recursive.graphql
---
Error: Cycle detected in fragment `selfRefFrag`
    ╭─[ field_selection_merging_recursive.graphql:11:6 ]
    │
  9 │ fragment selfRefFrag on Dog {
    │          ─────┬─────  
    │               ╰─────── Affected fragment definition
    │ 
 11 │   ...selfRefFrag
    │      ─────┬─────  
    │           ╰─────── Cycle introduced by fragment spread
────╯
